--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
-.menu{
+.menucolor{
 
-    background-color: #22d7ff;
-    width: 100%;
-    height: 150px;
+    background-color: #49576b !important;
+  
 }
 
 .btn{
@@ -12,11 +11,27 @@
     color: #22d7ff;
 }
 
-img{
+/*img{
 
     position: absolute;
     width: 120px;
     height: 120px;
     border-radius: 90px;
     margin: 20px 90px;
+}*/
+
+
+
+.imgsize{ 
+    max-width: 10% !important;
+}
+
+
+.letracolor{
+    color:white !important;
+
+}
+
+.onlyblack a{ 
+    color: black !important;
 }
