--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,18 @@
     color:#FFFFFF;
     background-color:#FF914D;
     width: 268px;
-    height: 34px;
+    height: 50px;
     border-radius: 8px;
     
+}
+.cadastrar{
+    align-content: center;
+    color:#FFFFFF;
+    background-color:#FF914D;
+    width: 268px;
+    height: 50px;
+    border-radius: 8px;
+    margin: 150px 50%;
 }
 .cadastro{
 margin-left:400px;
